@@ -65,7 +65,7 @@ def main(args):
                     help='Target machine host name.', metavar='<target>',
                     default=None)
   parser.add_option('--ttl', action='store', dest='ttl',
-                    help='Time to live.', metavar='<ttl>', default=5)
+                    help='Time to live.', metavar='<ttl>', default=3600)
   parser.add_option('-v', '--view-name', action='store', dest='view_name',
                     help=('String of the view name <view-name>. Example: '
                     '"internal"'), metavar='<view-name>', default=None)
