@@ -72,7 +72,7 @@ def main(args):
                     help='Set this flag to only list DNS configuration without'
                          ' making any changes.', default=False)
   parser.add_option('--ttl', action='store', dest='ttl',
-                    help='Time to live.', metavar='<ttl>', default=5)
+                    help='Time to live.', metavar='<ttl>', default=3600)
   parser.add_option('-z', '--zone', action='store', dest='zone_name',
                     help='String of the zone name.', metavar='<zone-name>',
                     default=None)
